Add new tea and dessert options

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -249,6 +249,7 @@ const tea = [
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
   {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
+  {name:"Sweet Lavender",hex:"#999BC1",meta:"PANTONE 16-3931 TCX",memo:"夜明け空からの軽い癒し。"},
   {name:"Rooibos Tea",hex:"#A23C26",meta:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
 ];
 
@@ -271,7 +272,9 @@ const cocktail = [
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
   {name:"Chartreuse",hex:"#B5BF50",meta:"RGB(181,191,80)",memo:"嘘みたいな味の緑色。"},
   {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
-  {name:"Crème de Pêche",hex:"#F1C6B8",meta:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"}
+  {name:"Crème de Pêche",hex:"#F1C6B8",meta:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"},
+  {name:"Crème de Menthe",hex:"#6FA38C",meta:"PANTONE 16-5919 TCX",memo:"爽やかな宵風。"},
+  {name:"Mint Julep",hex:"#D3EFE0",meta:"PANTONE 12-5208 TCX",memo:"広がる清涼感と密やかな甘さ。"}
 ];
 
 const cosmic = [
