Update café names and descriptions in HTML

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -202,8 +202,9 @@ const coffee = [
   {name:"Java",hex:"#433431",meta:"PANTONE 19-1016 TCX",memo:"遠い島の煙い朝。"},
   {name:"French Roast",hex:"#58423F",meta:"PANTONE 19-1012 TCX",memo:"深煎りは言葉少なめ。"},
   {name:"Café Noir",hex:"#4B3621",meta:"RGB(75,54,33)",memo:"看板の灯りが消えたあと。"},
-  {name:"Café Crème",hex:"#98714F",meta:"RGB(152,113,79)",memo:"やわらかな苦味。"},
+  {name:"Café Crème",hex:"#98714F",meta:"RGB(152,113,79)",memo:"やわらかな苦味に包まれて。"},
   {name:"Macchiato",hex:"#B09079",pantone:"PANTONE 17-1221 TCX",memo:"点のミルク、焦げた砂糖。"},
+  {name:"Cappuccino",hex:"#633F32",meta:"PANTONE 19-1220 TCX",memo:"光の輪を残した苦味。"},
   {name:"Caramel Café",hex:"#864C24",meta:"PANTONE 18-1148 TCX",memo:"天井の照明がとろける。"}
 ];
 
@@ -212,9 +213,9 @@ const milk = [
   {name:"Café au Lait",hex:"#AE8774",meta:"PANTONE 17-1227 TCX",memo:"午後の日差しとミルクタイム。"},
   {name:"Lattè",hex:"#C5A582",meta:"PANTONE 15-1220 TCX",memo:"泡の斜面が静かに沈む。"},
   {name:"Affogato",hex:"#A98B71",meta:"RGB(169,139,113)",memo:"溶けかけの月に夜が落ちる。"},
-  {name:"Cappuccino",hex:"#633F32",meta:"PANTONE 19-1220 TCX",memo:"縁に残る泡のヘイロー。"},
+  {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡のヘイロー。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
-  {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包むぬくもり。"},
+  {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
