--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -223,6 +223,7 @@ const milk = [
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
   {name:"Royal Milk Tea",hex:"#CDB7A0",meta:"RGB(205,183,160)",memo:"王冠ではなくブランケット。"},
   {name:"Vanilla Cream",hex:"#F5D8C6",meta:"PANTONE 12-1009 TCX",memo:"曇りの日の白。"},
+  {name:"Strawberry Cream",hex:"#F3C3C3",meta:"PANTONE 13-2005 TCX",memo:"可愛さの塗り方。"},
   {name:"Cloud Cream",hex:"#E7DDC5",pantone:"PANTONE 12-0804 TCX",memo:"雨雲の白に落ちる。"}
 ];
 
@@ -256,6 +257,7 @@ const tea = [
 
 const dessert = [
   {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"ひんやりした乳白。"},
+  {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
@@ -263,10 +265,13 @@ const dessert = [
   {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"}, 
   {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
+  {name:"Macaroon",hex:"#B38B71",meta:"PANTONE 16-1323 TCX",memo:"一口サイズのお月さま。"},
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
   {name:"Ginger Bread",hex:"#9B5E3E",pantone:"PANTONE 18-1244 TCX",memo:"焼きたての角の香り。"},
+  {name:"Flan",hex:"#F6E3B3",meta:"PANTONE 11-0619 TCX",memo:"お口の中蕩ける真昼。"},
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
   {name:"Chocolate Cake",hex:"#724F44",meta:"RGB(114,79,68)",memo:"焦げた甘さの記憶。"},
+  {name:"Peach Cobbler",hex:"#FFB080",meta:"PANTONE 14-1231 TPX",memo:"ちょうどよく焼けた昼下がり。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"桃の泡のやさしさ。"}
 ];
 
@@ -274,6 +279,7 @@ const cocktail = [
   {name:"Blue Curacao",hex:"#32BECD",meta:"RGB(50,190,205)",memo:"少々甘酸っぱい夏空。"},
   {name:"Silver Bullet",hex:"#81839A",meta:"PANTONE 17-3933 TCX",memo:"たった一つだけの解決法。"},
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
+  {name:"Margarita",hex:"#B38B71",meta:"PANTONE 14-0116 TCX",memo:"すっきり爽やか夜の灯り。"},
   {name:"Chartreuse",hex:"#B5BF50",meta:"RGB(181,191,80)",memo:"嘘みたいな味の緑色。"},
   {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
   {name:"Crème de Pêche",hex:"#F1C6B8",meta:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"},
