--- a/access.html
+++ b/access.html
@@ -12,7 +12,7 @@
     <h1>アクセス</h1>
     <div class="panel">
       <div class="card" style="height:220px;display:flex;align-items:center;justify-content:center;background:linear-gradient(0deg,#eef3f8,#fafcff)">地図を書き直しています……</div>
-      <p>住所：漆谷県江縫栄市北司零寺2-1-1<br>潟巣町バス「総合病院前」下車すぐ。駐車場200台。</p>
+      <p><a href="https://youtube.com/@gaine_0">住所：漆谷県江縫栄市北司零寺2-1-1</a><br>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。</p>
       <p class="note">カフェ「Café Palette」江縫栄市立総合病院店。<a href="https://hospinfo-enuei-city.org/cafepalette">URL</a></p>
     </div>
   </main>
