--- a/hours.html
+++ b/hours.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <div id="header"></div>
-  <main id="main"></main>
+<h1>外来案内・受付時間</h1>
+<div class="panel">
+<table class="table" aria-label="外来受付時間">
+  <tr><th>受付</th><td><a href="https://null-gaine.fanbox.cc">8:30–11:30（初診）</a>／ <a href="https://yukinotachimai.booth.pm">8:30–16:30（再診・予約）</a></td></tr>
+  <tr><th>休診</th><td><a href="https://marshmallow-qa.com/gaine_0">火・水</a></td></tr>
+  <tr><th>救急</th><td><a href="https://twitter.com/gaine_0">24時間対応（救急外来）</a></td></tr>
+  <tr><th>連絡先</th><td>代表 000-000-0000 ／ 発熱外来 000-000-0001</td></tr>
+  
+</table>
+</div>
   <div id="footer"></div>
 
   <script>
@@ -17,7 +26,6 @@
     document.getElementById(id).innerHTML = await res.text();
   }
   loadPart("header", "partials/header.html");
-  loadPart("main", "partials/hours.html");
   loadPart("footer", "partials/footer.html");
   </script>
 </body>
