--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -252,6 +252,7 @@ const tea = [
   {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
   {name:"Sweet Lavender",hex:"#999BC1",meta:"PANTONE 16-3931 TCX",memo:"夜明け空からの軽い癒し。"},
+  {name:"Hibiscus",hex:"#DD3848",meta:"PANTONE 18-1762 TCX",memo:"真夏の鮮やかで甘い花。"},
   {name:"Rooibos Tea",hex:"#A23C26",meta:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
 ];
 
