--- a/irrtumderwelt.html
+++ b/irrtumderwelt.html
@@ -156,7 +156,7 @@
 <br>
 <br>
 <br>
-<a href="irrtumderwelt-k">KO</a><br> <a href="irrtumderwelt-e">EN</a><br>
+<a href="irrtumderwelt-k.html">KO</a><br> <a href="irrtumderwelt-e.html">EN</a><br>
 --------------------------------------------------------------------------------<br>
 また、本個体が「空白の概念」であっても、<br>
 完全にその性質や力を理解しているわけではないというのは面白い。<br>
