--- a/irrtumderwelt-e.html
+++ b/irrtumderwelt-e.html
@@ -184,8 +184,8 @@ END OF REPORT
 
 
 
-<a href="irrtumderwelt">JP</a>
-<a href="irrtumderwelt-k">KO</a>
+<a href="irrtumderwelt.html">JP</a>
+<a href="irrtumderwelt-k.html">KO</a>
 --------------------------------------------------------------------------------
 It's also interesting that even though this entity is the "concept of blank", 
 It does not fully understand its nature or power, which is intriguing.
