--- a/internallink.html
+++ b/internallink.html
@@ -7,19 +7,19 @@
 内部リンク集<br>
 ================================================================================<br>
 <br>
-<a href="https://hospinfo-enuei-city.org/">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､</a><br>
-<a href="https://hospinfo-enuei-city.org/en-dex">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【EN】</a><br>
-<a href="https://hospinfo-enuei-city.org/ko-dex">Ti9BIO2VtOuLuSDsl4bsnYw【KO】</a><br>
+<a href="index">豎溽ｸｫ譬?ｸらｫ狗ｷ丞粋逞?劼1000蜿ｷ螳､</a><br>
+<a href="en-dex.html">546d39304c57526c5a6d6c756158526c62486b67525868706333526c626d4e6c【EN】</a><br>
+<a href="ko-dex.html">Ti9BIO2VtOuLuSDsl4bsnYw【KO】</a><br>
 <br>
-<a href="https://hospinfo-enuei-city.org/utamihon">歌見本</a><br>
+<a href="utamihon.html">歌見本</a><br>
 <br>
-<a href="https://hospinfo-enuei-city.org/notice404">江縫栄市立総合病院からのお知らせ（改正）</a><br>
-<a href="https://hospinfo-enuei-city.org/notice404-k">엔에이 시립 종합병원에서 알려드립니다. （개정판）【KO】</a><br>
+<a href="notice404.html">江縫栄市立総合病院からのお知らせ（改正）</a><br>
+<a href="notice404-k.html">엔에이 시립 종합병원에서 알려드립니다. （개정판）【KO】</a><br>
 <br>
-<a href="https://hospinfo-enuei-city.org/insidemail55">セキュリティークリアランスを確認してください。</a><br>
-<a href="https://hospinfo-enuei-city.org/insidemail55-k">보안 인가를 확인하십시오.【KO】</a><br>
+<a href="insidemail55.html">セキュリティークリアランスを確認してください。</a><br>
+<a href="insidemail55-k.html">보안 인가를 확인하십시오.【KO】</a><br>
 <br>
-<a href="https://hospinfo-enuei-city.org/hovelp">観てるよ</a><br>
+<a href="hovelp.html">観てるよ</a><br>
 <br>
 <br>
 ================================================================================<br>
