--- a/overview.html
+++ b/overview.html
@@ -37,7 +37,7 @@
 
 <section class="panel">
   <h2>お問い合わせ</h2>
-  <p>代表：<a href="mailto:tellyourworld@hospinfo-enuei-city.org">tellyourworld@hospinfo-enuei-city.org</a>（平日9:00〜18:00）</p>
+  <p>代表：<a href="mailto:null.rei@proton.me">tellyourworld@hospinfo-enuei-city.org</a>（平日9:00〜18:00）</p>
 </section>
 
   
