--- a/cafepalette.html
+++ b/cafepalette.html
@@ -137,7 +137,7 @@ html.theme-dark .main::after{ opacity:.7 }
       <div class="hr"></div>
       <p class="tagline">曖昧が淹れる<ruby>靉靆<rt>あいたい</rt></ruby>の温度を、あなたへ。</p>
       <div class="kissa">—— だるい昼下がりに、色を一杯どうぞ。</div>
-      <a class="btn" href="https://hospinfo-enuei-city.org/cafeatsume">☕ 入る</a>
+      <a class="btn" href="cafeatsume.html">☕ 入る</a>
       <div class="note">クリックすると “かふぇあつめ” の棚へ進みます。</div>
     </section>
   </main>
