--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -218,6 +218,7 @@ const milk = [
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"},
   {name:"Oat Milk",hex:"#CEC4BA",meta:"PANTONE 13-0003 TCX",memo:"雨の窓と本の紙。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
+  {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"のしかかる甘い白。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
@@ -272,8 +273,11 @@ const dessert = [
   {name:"Flan",hex:"#F6E3B3",meta:"PANTONE 11-0619 TCX",memo:"お口の中蕩ける真昼。"},
   {name:"Petit Four",hex:"#88C1D3",pantone:"PANTONE 14-4516 TCX",memo:"切り分けた甘さ。"},
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
+  {name:"Decadent Chocolate",hex:"#513235",meta:"PANTONE 19-1625 TCX",memo:"深く潜れる甘さ。"},
   {name:"Chocolate Cake",hex:"#724F44",meta:"RGB(114,79,68)",memo:"焦げた甘さの記憶。"},
   {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
+  {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
+  {name:"Peach Pie",hex:"#FFA88B",meta:"PANTONE 14-1325 TSX",memo:"一かけらのお昼。"},
   {name:"Peach Cobbler",hex:"#FFB080",meta:"PANTONE 14-1231 TPX",memo:"ちょうどよく焼けた昼下がり。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"桃の泡のやさしさ。"}
 ];
@@ -292,8 +296,9 @@ const cocktail = [
 
 const cosmic = [
   {name:"Cosmic Latte",hex:"#FFF8E7",meta:"RGB(255,248,231)",memo:"宇宙の平均色。薄いミルクの白昼夢。"},
+  {name:"Silence",hex:"#F6EFE6",pantone:"PANTONE 11-0610 TSX",memo:"音のない白。"},
   {name:"Afterglow",hex:"#F3E6C8",pantone:"PANTONE 11-0510 TCX",memo:"薄明の光。"},
-  {name:"Silence",hex:"#F6EFE6",pantone:"PANTONE 11-0610 TSX",memo:"音のない白。"}
+  {name:"Moon Mist",hex:"#80817D",meta:"PANTONE 18-4105 TCX",memo:"朧月の夜。"}
 ];
 
 <!-- cosmic配列のすぐ後ろで一度閉じる -->
