--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -286,7 +286,7 @@ const cocktail = [
   {name:"Blue Curacao",hex:"#32BECD",meta:"RGB(50,190,205)",memo:"少々甘酸っぱい夏空。"},
   {name:"Silver Bullet",hex:"#81839A",meta:"PANTONE 17-3933 TCX",memo:"たった一つだけの解決法。"},
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
-  {name:"Margarita",hex:"#B38B71",meta:"PANTONE 14-0116 TCX",memo:"すっきり爽やか夜の灯り。"},
+  {name:"Margarita",hex:"#B5C38E",meta:"PANTONE 14-0116 TCX",memo:"すっきり爽やか夜の灯り。"},
   {name:"Chartreuse",hex:"#B5BF50",meta:"RGB(181,191,80)",memo:"嘘みたいな味の緑色。"},
   {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
   {name:"Crème de Pêche",hex:"#F1C6B8",meta:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"},
