--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -154,7 +154,7 @@ html.theme-dark{
   <section class="grid" id="sec-coffee"></section>
 
   <!-- Milk & Latte Section -->
-  <h2 class="section">🥛 Milk & Latte</h2>
+  <h2 class="section">🥛 Milk & Cream</h2>
   <hr class="hr"/>
   <section class="grid" id="sec-milk"></section>
 
@@ -196,6 +196,7 @@ html.theme-dark{
 const coffee = [
   {name:"Iced Coffee",hex:"#B18F6A",meta:"PANTONE 15-1040 TCX",memo:"氷が鳴る音で今朝も始めます。"},
   {name:"Espresso",hex:"#373030",meta:"PANTONE 19-1103 TCX",memo:"短い一口が夜を延ばす。"},
+  {name:"Demitasse",hex:"#41342B",meta:"PANTONE 19-0712 TCX",memo:"眠気との小さな戦闘準備。"},
   {name:"Black Coffee", hex:"#3B2F2F", meta:"PANTONE 19-1111 TCX",memo:"余白のない一口。"},
   {name:"Cold Brew",hex:"#805329",meta:"RGB(128,83,41)",memo:"冷たさの奥にだけ甘さがある。"},
   {name:"Coffee Liqueúr",hex:"#6A513B",meta:"PANTONE 18-0930 TCX",memo:"夜更かし佇むひそやかな甘さ。"},
@@ -243,16 +244,17 @@ const choco = [
   {name:"Cocoa",hex:"#584536",meta:"PANTONE 19-1119 TCX",memo:"一休みと甘さの編み合わせ。"},
   {name:"Shaved Chocolate",hex:"#543B35",meta:"PANTONE 19-1215 TCX",memo:"薄片が舌でほどける。"},
   {name:"Bitter Chocolate",hex:"#503130",meta:"PANTONE 19-1317 TCX",memo:"やさしくない優しさ。"},
+  {name:"Decadent Chocolate",hex:"#513235",meta:"PANTONE 19-1625 TCX",memo:"深く潜れる甘さ。"},
   {name:"Mocha Bisque",hex:"#8C543A",meta:"PANTONE 18-1140 TCX",memo:"午後三時、窓辺の粉砂糖。"},
   {name:"Mocha Mousse",hex:"#A47864",meta:"PANTONE 17-1230 TCX",memo:"人肌に近い甘さ。"},
-  {name:"Hazelnut Mocha",hex:"#8E6E53",meta:"RGB(142,110,83)",memo:"影にも甘さは宿るよ。"},
-  {name:"Fondue Fudge",hex:"#5E4336",pantone:"PANTONE 19-1224 TCX",memo:"濃厚な甘苦さ。"},
+  {name:"Fondue Fudge",hex:"#5E4336",pantone:"PANTONE 19-1224 TCX",memo:"影にも甘さは宿るよ。"},
   {name:"Toffee",hex:"#755139",pantone:"PANTONE 18-1031 TCX",memo:"降り注ぐ甘さ。"},
   {name:"Cioccolata",hex:"#683722",meta:"RGB(104,55,34)",memo:"濃厚なチョコ。"}
 ];
 
 const tea = [
   {name:"Matcha",hex:"#9CAF88",meta:"RGB(156,175,136)",memo:"深呼吸みたいな緑。"},
+  {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯でスッキリ解ける夜のわだかまり。"},
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
   {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
@@ -267,8 +269,11 @@ const ice = [
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
+  {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
   {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
+  {name:"Grape Compote",hex:"#63516D",meta:"PANTONE 18-3513 TCX",memo:"その「み」を煮込んだ先には。"},
+  {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの味でしょう。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"完璧な桃味のやさしさ。"}
 ];
 
@@ -279,10 +284,9 @@ const dessert = [
   {name:"Flan",hex:"#F6E3B3",meta:"PANTONE 11-0619 TCX",memo:"お口の中蕩ける真昼。"},
   {name:"Petit Four",hex:"#88C1D3",pantone:"PANTONE 14-4516 TCX",memo:"切り分けた甘さ。"},
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
-  {name:"Decadent Chocolate",hex:"#513235",meta:"PANTONE 19-1625 TCX",memo:"深く潜れる甘さ。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
   {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"}, 
-  {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
+  {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが素敵な味になるんだって。"},
   {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
   {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
   {name:"Peach Pie",hex:"#FFA88B",meta:"PANTONE 14-1325 TSX",memo:"一かけらのお昼。"},
