--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -207,6 +207,7 @@ const coffee = [
   {name:"Americano",hex:"#6B4A33",pantone:"PANTONE 18-1048 TCX",memo:"薄めたのは苦味ではなく距離。"},
   {name:"Java",hex:"#433431",meta:"PANTONE 19-1016 TCX",memo:"遠い島の煙い朝。"},
   {name:"French Roast",hex:"#58423F",meta:"PANTONE 19-1012 TCX",memo:"深煎りは言葉少なめ。"},
+  {name:"Frappé",hex:"#C1A994",meta:"PANTONE 14-1212 TCX",memo:"冷たさで眠気を冷まそう。"},
   {name:"Café Noir",hex:"#4B3621",meta:"RGB(75,54,33)",memo:"看板の灯りが消えたあと。"},
   {name:"Café au Lait",hex:"#AE8774",meta:"PANTONE 17-1227 TCX",memo:"午後の日差しとミルクタイム。"},
   {name:"Café Crème",hex:"#98714F",meta:"RGB(152,113,79)",memo:"やわらかな苦味に包まれて。"},
@@ -241,6 +242,7 @@ const choco = [
   {name:"Chocolate Cremoso",hex:"#3B2A28",meta:"PANTONE 19-1117 TCX",memo:"舌の上で長く続く。"},
   {name:"Chocolate Lab",hex:"#5B4636",pantone:"PANTONE 19-1214 TCX",memo:"信頼の色、落ち着きの毛並み。"},
   {name:"Chocolate Truffle",hex:"#612E35",meta:"PANTONE 19-1526 TCX",memo:"ほのかな赤み、秘密の一粒。"},
+  {name:"Chocolate Fondant",hex:"#503129",meta:"PANTONE 19-1432 TCX",memo:"甘さに何処までも溺れてく。"},
   {name:"Cocoa",hex:"#584536",meta:"PANTONE 19-1119 TCX",memo:"一休みと甘さの編み合わせ。"},
   {name:"Shaved Chocolate",hex:"#543B35",meta:"PANTONE 19-1215 TCX",memo:"薄片が舌でほどける。"},
   {name:"Bitter Chocolate",hex:"#503130",meta:"PANTONE 19-1317 TCX",memo:"やさしくない優しさ。"},
@@ -266,6 +268,7 @@ const tea = [
 const ice = [
   {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"ひんやりした乳白。"},
   {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
+  {name:"Granita",hex:"#97204B",meta:"PANTONE 19-2039 TCX",memo:"所謂クラシック。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
@@ -273,6 +276,7 @@ const ice = [
   {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
   {name:"Grape Compote",hex:"#63516D",meta:"PANTONE 18-3513 TCX",memo:"その「み」を煮込んだ先には。"},
+  {name:"Pink Lemonade",hex:"#DB6580",meta:"PANTONE 16-1735 TCX",memo:"ピンクってだけで少し特別になる。"},
   {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの味でしょう。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"完璧な桃味のやさしさ。"}
 ];
@@ -280,6 +284,7 @@ const ice = [
 const dessert = [
   {name:"Macaroon",hex:"#B38B71",meta:"PANTONE 16-1323 TCX",memo:"一口サイズのお月さま。"},
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
+  {name:"Blueberry Pancake",hex:"#1C395C",meta:"PANTONE 19-4119 TSX",memo:"手軽なほど難しい。"},
   {name:"Ginger Bread",hex:"#9B5E3E",pantone:"PANTONE 18-1244 TCX",memo:"焼きたての角の香り。"},
   {name:"Flan",hex:"#F6E3B3",meta:"PANTONE 11-0619 TCX",memo:"お口の中蕩ける真昼。"},
   {name:"Petit Four",hex:"#88C1D3",pantone:"PANTONE 14-4516 TCX",memo:"切り分けた甘さ。"},
