--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -299,7 +299,7 @@ const dessert = [
 ];
 
 const cocktail = [
-  {name:"Blue Curacao",hex:"#32BECD",meta:"RGB(50,190,205)",memo:"少々甘酸っぱい夏空。"},
+  {name:"Blue Curacao",hex:"#2CA2AF",meta:"PANTONE 15-4825 TCX",memo:"少々甘酸っぱい夏空。"},
   {name:"Silver Bullet",hex:"#81839A",meta:"PANTONE 17-3933 TCX",memo:"たった一つだけの解決法。"},
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
   {name:"Margarita",hex:"#B5C38E",meta:"PANTONE 14-0116 TCX",memo:"すっきり爽やか夜の灯り。"},
