--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -272,7 +272,9 @@ const ice = [
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
+  {name:"Cherry Blossom",hex:"#F7CEE0",meta:"PANTONE 13-3207 TCX",memo:"お馴染みの春色。"},
   {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
+  {name:"Lollipop",hex:"#BB1A36",meta:"PANTONE 18-1764 TCX",memo:"思い出に残ってるあの味。"},
   {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
   {name:"Grape Compote",hex:"#63516D",meta:"PANTONE 18-3513 TCX",memo:"その「み」を煮込んだ先には。"},
@@ -282,6 +284,8 @@ const ice = [
 ];
 
 const dessert = [
+  {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"},
+  {name:"Ambrosia",hex:"#B9CAB0",meta:"PANTONE 12-0109 TCX",memo:"盛り合わせた健康な甘さ。"},  
   {name:"Macaroon",hex:"#B38B71",meta:"PANTONE 16-1323 TCX",memo:"一口サイズのお月さま。"},
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
   {name:"Blueberry Pancake",hex:"#1C395C",meta:"PANTONE 19-4119 TSX",memo:"手軽なほど難しい。"},
@@ -290,7 +294,6 @@ const dessert = [
   {name:"Petit Four",hex:"#88C1D3",pantone:"PANTONE 14-4516 TCX",memo:"切り分けた甘さ。"},
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
-  {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"}, 
   {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが素敵な味になるんだって。"},
   {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
   {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
