--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -218,14 +218,14 @@ const coffee = [
 
 const milk = [
   {name:"Crème Brûlée",hex:"#E4D7C5",pantone:"PANTONE 13-1006 TPG",memo:"光が焦がすミルクの縁。"},
+  {name:"Lattè",hex:"#C5A582",meta:"PANTONE 15-1220 TCX",memo:"泡の斜面が静かに沈む。"},
+  {name:"Affogato",hex:"#A98B71",meta:"PANTONE 17-1220 TSX",memo:"溶けかけの月に夜が落ちる。"},
   {name:"Oat Milk",hex:"#CEC4BA",meta:"PANTONE 13-0003 TCX",memo:"雨の窓と本の紙。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
-  {name:"Lattè",hex:"#C5A582",meta:"PANTONE 15-1220 TCX",memo:"泡の斜面が静かに沈む。"},
-  {name:"Affogato",hex:"#A98B71",meta:"RGB(169,139,113)",memo:"溶けかけの月に夜が落ちる。"},
   {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡のヘイロー。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"}, 
-  {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"のしかかる甘い白。"},
+  {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"上に乗る甘さ。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
@@ -260,15 +260,17 @@ const tea = [
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
   {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
   {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
+  {name:"Lemon Grass",hex:"#CBC388",meta:"PANTONE 12-0626 TCX",memo:"爽やかな朝の味。"},
   {name:"Sweet Lavender",hex:"#999BC1",meta:"PANTONE 16-3931 TCX",memo:"夜明け空からの軽い癒し。"},
   {name:"Hibiscus",hex:"#DD3848",meta:"PANTONE 18-1762 TCX",memo:"真夏の鮮やかで甘い花。"},
   {name:"Rooibos Tea",hex:"#A23C26",meta:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
 ];
 
 const ice = [
-  {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"ひんやりした乳白。"},
+  {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"すべての基本、だからこそ美味しい。"},
   {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
   {name:"Granita",hex:"#97204B",meta:"PANTONE 19-2039 TCX",memo:"所謂クラシック。"},
+  {name:"Apricot Sherbet",hex:"#E6BD91",meta:"PANTONE 13-1031 TCX",memo:"春の実と氷の巡り会わせ。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
@@ -285,6 +287,7 @@ const ice = [
 
 const dessert = [
   {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"},
+  {name:"Apple Cinnamon",hex:"#B0885C",pantone:"PANTONE 17-1045 TCX",memo:"秋のぬくもり。"},
   {name:"Ambrosia",hex:"#B9CAB0",meta:"PANTONE 12-0109 TCX",memo:"盛り合わせた健康な甘さ。"},  
   {name:"Macaroon",hex:"#B38B71",meta:"PANTONE 16-1323 TCX",memo:"一口サイズのお月さま。"},
   {name:"Butterscotch", hex:"#E19740", meta:"PANTONE 15-1147 TCX", memo:"フォークで掬う手の温もり。"},
