--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -227,6 +227,7 @@ const milk = [
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"}, 
   {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"上に乗る甘さ。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
+  {name:"Cannoli Cream",hex:"#E7E4D2",meta:"PANTONE 11-4302 TCX",memo:"ミルクたっぷりの時間。"},
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
   {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
@@ -244,6 +245,7 @@ const choco = [
   {name:"Chocolate Lab",hex:"#5B4636",pantone:"PANTONE 19-1214 TCX",memo:"信頼の色、落ち着きの毛並み。"},
   {name:"Chocolate Truffle",hex:"#612E35",meta:"PANTONE 19-1526 TCX",memo:"ほのかな赤み、秘密の一粒。"},
   {name:"Chocolate Fondant",hex:"#503129",meta:"PANTONE 19-1432 TCX",memo:"甘さに何処までも溺れてく。"},
+  {name:"Chocolate Malt",hex:"#86695A",meta:"PANTONE 18-1324 TCX",memo:"どこにも合わせられる甘さ。"},
   {name:"Cocoa",hex:"#584536",meta:"PANTONE 19-1119 TCX",memo:"一休みと甘さの編み合わせ。"},
   {name:"Shaved Chocolate",hex:"#543B35",meta:"PANTONE 19-1215 TCX",memo:"薄片が舌でほどける。"},
   {name:"Bitter Chocolate",hex:"#503130",meta:"PANTONE 19-1317 TCX",memo:"やさしくない優しさ。"},
@@ -272,6 +274,7 @@ const ice = [
   {name:"Strawberry Ice",hex:"#E78B90",meta:"PANTONE 16-1720 TCX",memo:"さわやか可愛いのレシピ。"},
   {name:"Granita",hex:"#97204B",meta:"PANTONE 19-2039 TCX",memo:"所謂クラシック。"},
   {name:"Apricot Sherbet",hex:"#E6BD91",meta:"PANTONE 13-1031 TCX",memo:"春の実と氷の巡り会わせ。"},
+  {name:"Pear Sorbet",hex:"#E0D7B4",meta:"PANTONE 11-0615 TCX",memo:"梨の甘さを引き立てる。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
   {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
