--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -259,6 +259,7 @@ const choco = [
 
 const tea = [
   {name:"Matcha",hex:"#9CAF88",meta:"RGB(156,175,136)",memo:"深呼吸みたいな緑。"},
+  {name:"Herbal Garden",hex:"#9CAD60",meta:"PANTONE 15-0336 TCX",memo:"本当にありそうなお茶の名前。"},  
   {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯でスッキリ解ける夜のわだかまり。"},
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
   {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
@@ -311,7 +312,7 @@ const dessert = [
 const cocktail = [
   {name:"Blue Curacao",hex:"#2CA2AF",meta:"PANTONE 15-4825 TCX",memo:"少々甘酸っぱい夏空。"},
   {name:"Silver Bullet",hex:"#81839A",meta:"PANTONE 17-3933 TCX",memo:"たった一つだけの解決法。"},
-  {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
+  {name:"Carnival Glass",hex:"#81E5BC",meta:"PANTONE 13-6030 TSX",memo:"微光を帯びた硝子。"},
   {name:"Margarita",hex:"#B5C38E",meta:"PANTONE 14-0116 TCX",memo:"すっきり爽やか夜の灯り。"},
   {name:"Chartreuse",hex:"#B5BF50",meta:"RGB(181,191,80)",memo:"嘘みたいな味の緑色。"},
   {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
