--- a/lespectre.html
+++ b/lespectre.html
@@ -116,7 +116,7 @@ main::after{
 /* ==== Dataset（例。ここにどんどん注ぐ） ==== */
 /* Fluorescent：印刷系の蛍光など “番号はあるが通称名なし” 想定 */
 const fluorescent = [
-  {name:"(Unnamed)", hex:"#FF7276", meta:"PANTONE 805 C (Unnamed)", memo:"仮HEX。現物見本から調整推奨。"},
+  {name:"Tomori", hex:"#F0C063", meta:"PANTONE P 14-6 C (Unnamed)", memo:"この街のお茶の色。"},
   {name:"(Unnamed)", hex:"#00F5A0", meta:"Fluorescent Green (Unnamed)", memo:"仮HEX／スポイト差し替え前。"}
 ];
 
