--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -386,18 +386,18 @@ function mount(gridId, arr, first=12){
 
   render(first);
 
-  if(arr.length > shown){
-    const more = document.createElement('button');
-    more.className = 'btn';
-    more.textContent = `さらに表示（${arr.length - shown}）`;
-    more.style.margin = '10px 0 0';
-    more.onclick = ()=>{
-      render(12);
-      if(shown >= arr.length) more.remove();
-      else more.textContent = `さらに表示（${arr.length - shown}）`;
-    };
-    grid.after(more);
-  }
+ if(arr.length > shown){
+  const more = document.createElement('button');
+  more.className = 'btn more-btn';
+  more.dataset.for = gridId;            // ← この行を追加
+  more.textContent = `さらに表示（${arr.length - shown}）`;
+  more.style.margin = '10px 0 0';
+  more.onclick = ()=>{
+    render(12);
+    if(shown >= arr.length) more.remove();
+    else more.textContent = `さらに表示（${arr.length - shown}）`;
+  };
+  grid.after(more);
 }
   function cardTemplate(it){
     const card=document.createElement('article');card.className="card";
@@ -458,9 +458,14 @@ document.querySelectorAll('.section').forEach(h2 => {
     const hr = h2.nextElementSibling;
     const grid = hr?.nextElementSibling;
     if (grid && grid.classList.contains('grid')) {
-      const isCollapsed = grid.classList.toggle('collapsed');
-      h2.classList.toggle('collapsed', isCollapsed);
-      arrow.textContent = isCollapsed ? '▶' : '▼';
+      // 折りたたみトグル内のクリック処理に追記
+const isCollapsed = grid.classList.toggle('collapsed');
+h2.classList.toggle('collapsed', isCollapsed);
+arrow.textContent = isCollapsed ? '▶' : '▼';
+
+// ここから ↓ 追加
+const btn = document.querySelector(`.more-btn[data-for="${grid.id}"]`);
+if (btn) btn.style.display = isCollapsed ? 'none' : '';
     }
   });
 });
